--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -9,29 +9,32 @@
     "format": "prettier --write ."
   },
   "peerDependencies": {
-    "@klicker-uzh/graphql": "*",
-    "@klicker-uzh/markdown": "*",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@klicker-uzh/graphql": "*",
+    "@klicker-uzh/markdown": "*",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "@uzh-bf/design-system": "1.2.4",
     "dayjs": "^1.11.6",
+    "is-hotkey": "^0.2.0",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
+    "slate": "^0.90.0",
+    "slate-history": "^0.86.0",
+    "slate-react": "^0.91.0",
     "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "yup": "^1.0.0",
-    "is-hotkey": "^0.2.0",
-    "slate": "^0.90.0",
-    "slate-history": "^0.86.0",
-    "slate-react": "^0.91.0"
+    "yup": "^1.0.0"
   },
   "volta": {
     "extends": "../../package.json"
+  },
+  "dependencies": {
+    "@next/font": "^13.1.6"
   }
 }
