--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@klicker-uzh/graphql": "*",
     "@klicker-uzh/markdown": "*",
+    "@next/font": "^13.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -33,8 +34,5 @@
   },
   "volta": {
     "extends": "../../package.json"
-  },
-  "dependencies": {
-    "@next/font": "^13.1.6"
   }
 }
