--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -24,10 +24,10 @@
     "@klicker-uzh/graphql": "^3.0.0-alpha.0",
     "@klicker-uzh/markdown": "^3.0.0-alpha.0",
     "@klicker-uzh/prisma": "^3.0.0-alpha.0",
+    "@next/font": "13.1.6",
     "@radix-ui/react-tabs": "1.0.1",
-    "@sentry/nextjs": "7.37.2",
     "@socialgouv/matomo-next": "1.6.1",
-    "@uzh-bf/design-system": "1.2.3",
+    "@uzh-bf/design-system": "1.4.2",
     "body-parser": "1.20.1",
     "dayjs": "1.11.7",
     "deepmerge": "4.3.0",
