--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -12,6 +12,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@klicker-uzh/graphql": "*",
+    "@klicker-uzh/markdown": "*",
+    "@next/font": "^13.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
