chore(apps/frontend-*): make dockerfiles more coherent and add missing args

--- a/apps/frontend-control/Dockerfile
+++ b/apps/frontend-control/Dockerfile
@@ -16,15 +16,19 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-ARG NODE_ENV production
+ARG NODE_ENV="production"
 ARG COOKIE_DOMAIN
 ARG API_DOMAIN
 ARG S3_PATHNAME
 ARG S3_HOSTNAME
 ARG NEXT_PUBLIC_AVATAR_BASE_PATH
-ARG NEXT_PUBLIC_ADD_RESPONSE_URL
 ARG NEXT_PUBLIC_API_URL
 ARG NEXT_PUBLIC_API_URL_SSR
+ARG NEXT_PUBLIC_PWA_URL
+ARG NEXT_PUBLIC_MANAGE_URL
+ARG NEXT_PUBLIC_CONTROL_URL
+ARG NEXT_PUBLIC_MATOMO_URL
+ARG NEXT_PUBLIC_MATOMO_ID
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
@@ -39,7 +43,7 @@ FROM node:18-alpine AS runner
 
 WORKDIR /app
 
-ARG NODE_ENV production
+ARG NODE_ENV="production"
 ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN addgroup --system --gid 1001 nodejs
