--- a/apps/frontend-pwa/Dockerfile
+++ b/apps/frontend-pwa/Dockerfile
@@ -16,7 +16,7 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-ARG NODE_ENV production
+ARG NODE_ENV="production"
 ARG COOKIE_DOMAIN
 ARG API_DOMAIN
 ARG S3_PATHNAME
@@ -26,6 +26,11 @@ ARG NEXT_PUBLIC_ADD_RESPONSE_URL
 ARG NEXT_PUBLIC_API_URL
 ARG NEXT_PUBLIC_API_URL_SSR
 ARG NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY
+ARG NEXT_PUBLIC_PWA_URL
+ARG NEXT_PUBLIC_MANAGE_URL
+ARG NEXT_PUBLIC_CONTROL_URL
+ARG NEXT_PUBLIC_MATOMO_URL
+ARG NEXT_PUBLIC_MATOMO_ID
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
@@ -40,7 +45,7 @@ FROM node:18-alpine AS runner
 
 WORKDIR /app
 
-ARG NODE_ENV production
+ARG NODE_ENV="production"
 ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN addgroup --system --gid 1001 nodejs
