--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -13,8 +13,8 @@
     "build": "run-s build:tailwind build:ts",
     "build:tailwind": "tailwindcss -i src/globals.css -o src/public/tailwind.css",
     "build:ts": "NODE_ENV=production tsup",
-    "dev": "run-p dev:tailwind dev:ts",
-    "dev:tailwind": "tailwindcss -i src/globals.css -o src/public/tailwind.css --watch",
+    "//dev": "run-p dev:tailwind dev:ts",
+    "dev:tailwind": "tailwindcss -i src/globals.css -o src/public/tailwind.css -w",
     "dev:ts": "NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "size": "size-limit"
@@ -29,9 +29,13 @@
     }
   ],
   "peerDependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@uzh-bf/design-system": "^1.0.0",
     "next": "^13.0.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
