--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -4,8 +4,12 @@
   "types": "src/index.ts",
   "private": true,
   "scripts": {
-    "dev": "tailwindcss -i src/globals.css -o src/tailwind.css -w",
-    "build": "tailwindcss -i src/globals.css -o src/tailwind.css",
+    "//dev": "run-p dev:tw:*",
+    "dev:tw:components": "tailwindcss -i src/components.css -o dist/components.css -w",
+    "dev:tw:utilities": "tailwindcss -i src/utilities.css -o dist/utilities.css -w",
+    "build": "run-p build:tw:*",
+    "build:tw:components": "tailwindcss -i src/components.css -o dist/components.css",
+    "build:tw:utilities": "tailwindcss -i src/utilities.css -o dist/utilities.css",
     "format": "prettier --write ."
   },
   "peerDependencies": {
@@ -15,10 +19,6 @@
     "@klicker-uzh/graphql": "*",
     "@klicker-uzh/markdown": "*",
     "@next/font": "^13.1.6",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.7",
     "@uzh-bf/design-system": "^1.3.0",
     "dayjs": "^1.11.6",
     "is-hotkey": "^0.2.0",
@@ -28,7 +28,6 @@
     "slate-history": "^0.86.0",
     "slate-react": "^0.91.0",
     "tailwind-merge": "^1.8.0",
-    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "yup": "^1.0.0",
     "recharts": "^2.4.1",
@@ -36,5 +35,13 @@
   },
   "volta": {
     "extends": "../../package.json"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.2.4"
   }
 }
