--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -43,6 +43,7 @@
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "2.4.3",
     "shared-components": "*",
     "sharp": "0.31.3",
     "tailwind-merge": "1.9.1",
