--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "9.0.0",
     "localforage": "1.10.0",
     "next": "13.1.6",
+    "next-intl": "2.10.4",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "ramda": "0.28.0",
