--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -35,6 +35,7 @@
     "localforage": "1.10.0",
     "lodash": "4.17.21",
     "next": "13.1.6",
+    "next-intl": "2.10.4",
     "nookies": "2.5.2",
     "ramda": "0.28.0",
     "react": "18.2.0",
