--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -31,7 +31,8 @@
     "typescript": "^4.9.3",
     "yup": "^1.0.0",
     "recharts": "^2.4.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "next-intl": "^2.10.4"
   },
   "volta": {
     "extends": "../../package.json"
