fix matomo env variables

--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -13,5 +13,5 @@ NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
 NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
 NEXT_PUBLIC_CONTROL_URL="https://control.klicker.uzh.ch"
 
-MATOMO_URL=https://webstats.uzh.ch/
-MATOMO_ID=469
+NEXT_PUBLIC_MATOMO_URL="https://webstats.uzh.ch/"
+NEXT_PUBLIC_MATOMO_SITE_ID="469"
