--- a/apps/frontend-pwa/.env.test
+++ b/apps/frontend-pwa/.env.test
@@ -4,6 +4,7 @@ S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
+NEXT_PUBLIC_IMAGE_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/img"
 NEXT_PUBLIC_ADD_RESPONSE_URL="http://127.0.0.1:7072/api/AddResponse"
 NEXT_PUBLIC_API_URL="http://127.0.0.1:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=$NEXT_PUBLIC_API_URL
