chore: re-add sendria to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       args:
         NODE_ENV: development
         COOKIE_DOMAIN: 127.0.0.1
-        NEXT_PUBLIC_ADD_RESPONSE_URL: 'http://127.0.0.1:7072/api/AddResponse'
-        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+        NEXT_PUBLIC_ADD_RESPONSE_URL: "http://127.0.0.1:7072/api/AddResponse"
+        NEXT_PUBLIC_API_URL: "http://127.0.0.1:3000/api/graphql"
+        NEXT_PUBLIC_API_URL_SSR: "http://backend:3000/api/graphql"
     environment:
       APP_SECRET: abcd
     ports:
@@ -25,8 +25,8 @@ services:
       args:
         NODE_ENV: development
         COOKIE_DOMAIN: 127.0.0.1
-        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+        NEXT_PUBLIC_API_URL: "http://127.0.0.1:3000/api/graphql"
+        NEXT_PUBLIC_API_URL_SSR: "http://backend:3000/api/graphql"
     ports:
       - 3002:3000
     networks:
@@ -40,8 +40,8 @@ services:
       args:
         NODE_ENV: development
         COOKIE_DOMAIN: 127.0.0.1
-        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+        NEXT_PUBLIC_API_URL: "http://127.0.0.1:3000/api/graphql"
+        NEXT_PUBLIC_API_URL_SSR: "http://backend:3000/api/graphql"
     ports:
       - 3003:3000
     networks:
@@ -53,16 +53,16 @@ services:
     build:
       context: apps/backend-docker
       args:
-        NODE_ENV: 'development'
+        NODE_ENV: "development"
     environment:
-      DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/main'
-      APP_SECRET: 'abcd'
-      REDIS_HOST: 'redis_exec'
+      DATABASE_URL: "postgres://klicker:klicker@postgres:5432/main"
+      APP_SECRET: "abcd"
+      REDIS_HOST: "redis_exec"
       REDIS_PORT: 6379
-      REDIS_CACHE_HOST: 'redis_cache'
+      REDIS_CACHE_HOST: "redis_cache"
       REDIS_CACHE_PORT: 6379
-      API_DOMAIN: '127.0.0.1'
-      COOKIE_DOMAIN: '127.0.0.1'
+      API_DOMAIN: "127.0.0.1"
+      COOKIE_DOMAIN: "127.0.0.1"
     ports:
       - 3000:3000
     networks:
@@ -95,6 +95,14 @@ services:
     image: docker.io/library/redis:6
     ports:
       - 6380:6379
+    networks:
+      - klicker-dev
+
+  sendria:
+    image: msztolcman/sendria:v2.2.2.0
+    ports:
+      - 1025:1025
+      - 1080:1080
     networks:
       - klicker-dev
 
