--- a/packages/prisma/.env.template
+++ b/packages/prisma/.env.template
@@ -1,3 +1,5 @@
 INITIAL_PASSWORD=abcd
 DATABASE_URL=postgres://klicker:klicker@localhost:5432/main
 SHADOW_DATABASE_URL=postgres://klicker:klicker@localhost:5432/shadow
+USER_EMAIL=
+USER_SHORTNAME=
