enhance: migrate learning elements to new stack-based approach (#3446)

--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -8,7 +8,8 @@
     "transpileOnly": true,
     "moduleTypes": {
       "src/seed/*": "esm",
-      "src/data/*": "esm"
+      "src/data/*": "esm",
+      "src/scripts/*": "esm"
     }
   }
 }
