fix(packages/prisma): mark src/util.ts as ESM to allow usage in seed

--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -9,7 +9,8 @@
     "moduleTypes": {
       "src/seed/*": "esm",
       "src/data/*": "esm",
-      "src/scripts/*": "esm"
+      "src/scripts/*": "esm",
+      "src/util.ts": "esm"
     }
   }
 }
