--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -10,7 +10,8 @@
     "build": "run-p build:tw:*",
     "build:tw:components": "tailwindcss -i src/components.css -o dist/components.css",
     "build:tw:utilities": "tailwindcss -i src/utilities.css -o dist/utilities.css",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "peerDependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
