--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "build": "turbo run build",
     "publish": "turbo run publish",
     "format": "turbo run format",
+    "format:check": "turbo run format:check",
+    "lint": "turbo run lint",
     "//release": "standard-version --dry-run",
     "//release:dry": "standard-version --dry-run",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
