--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -12,6 +12,7 @@
     "build": "NODE_ENV=production tsup",
     "build:watch": "NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "size": "size-limit"
   },
   "engines": {
