wip: fix services in workflow

--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -167,10 +167,16 @@ jobs:
           - 6379:6379
       frontend-manage:
         image: ${{ github.repository }}/frontend-manage:3.0.0-alpha.70
+        credentials:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
         ports:
           - 3002:3000
       frontend-pwa:
         image: ${{ github.repository }}/frontend-pwa:3.0.0-alpha.70
+        credentials:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
         ports:
           - 3001:3000
         
