--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -2,9 +2,9 @@ name: Klicker automated testing with cypress
 on:
   push:
     branches: ['v3']
-  pull_request:
-    branches: ["v3"]
-    types: [opened, synchronize, reopened]
+  # pull_request:
+  #   branches: ["v3"]
+  #   types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 env:
