--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: ["v3"]
     types: [opened, synchronize, reopened]
-  workflow_dispatch:
+  # workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
