--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -166,14 +166,14 @@ jobs:
         ports:
           - 6379:6379
       frontend-manage:
-        image: ghcr.io/${{ github.repository }}/frontend-manage:3.0.0-alpha.70
+        image: ghcr.io/${{ github.repository }}/frontend-manage:v3.0.0-alpha.70
         credentials:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
         ports:
           - 3002:3000
       frontend-pwa:
-        image: ghcr.io/${{ github.repository }}/frontend-pwa:3.0.0-alpha.70
+        image: ghcr.io/${{ github.repository }}/frontend-pwa:v3.0.0-alpha.70
         credentials:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
