--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -223,7 +223,7 @@ jobs:
       - name: Apply migrations and seed the database
         # TODO: caching with turbo? why does it run twice?
         run: |
-          npm run build:test
+          # npm run build
           cd packages/prisma
           npm run prisma:reset:seed -- -f
           # npm run seed:cypress
