--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -206,7 +206,10 @@ jobs:
           node-version: 18
       - name: Check out repository code
         uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1
+      - name: Install dependencies from package-lock.json
+        uses: bahmutov/npm-install@v1
+        with:
+          args: ci # run npm ci instead of npm install to install from package-lock.json
       - name: Install azure-functions-core-tools
         # TODO: caching
         run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
