wip: fix seed database

--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -206,10 +206,23 @@ jobs:
           node-version: 18
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: Install dependencies from package-lock.json
+      - name: Install dependencies
         uses: bahmutov/npm-install@v1
         with:
-          args: ci # run npm ci instead of npm install to install from package-lock.json
+          working-directory: |
+            ./
+            apps/frontend-manage
+            apps/frontend-pwa
+            apps/backend-docker
+            apps/backend-response-processor
+            apps/backend-responses
+            packages/prisma
+            packages/shared-components
+            packages/markdown
+            packages/graphql
+            packages/grading
+            packages/lti
+
       - name: Install azure-functions-core-tools
         # TODO: caching
         run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
