--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -209,7 +209,20 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
         with:
-          args: ci
+          useLockFile: false
+          working-directory: |
+            ./
+            apps/frontend-manage
+            apps/frontend-pwa
+            apps/backend-docker
+            apps/backend-response-processor
+            apps/backend-responses
+            packages/prisma
+            packages/shared-components
+            packages/markdown
+            packages/graphql
+            packages/grading
+            packages/lti
       - name: Install azure-functions-core-tools
         # TODO: caching
         run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
