--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src", "types/typings.d.ts"],
+  "include": ["src"],
   "compilerOptions": {
     "module": "ESNext"
   },
