--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -229,7 +229,7 @@ jobs:
       - name: Apply migrations and seed the database
         # TODO: caching with turbo? why does it run twice?
         run: |
-          npm install
+          npm ci
           npm run build
           cd packages/prisma
           npm run prisma:reset:raw -- -f
