--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -229,6 +229,7 @@ jobs:
       - name: Apply migrations and seed the database
         # TODO: caching with turbo? why does it run twice?
         run: |
+          rm -rf node_modules
           npm ci
           npm run build
           cd packages/prisma
