--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -231,8 +231,8 @@ jobs:
         run: |
           mv packages/prisma/.env.template packages/prisma/.env
           mv apps/backend-docker/.env.template apps/backend-docker/.env
-          mv apps/backend-response-processor/local.settings.json.template apps/backend-response-processor/local.settings.json
-          mv apps/backend-responses/local.settings.json.template apps/backend-responses/local.settings.json
+          echo $FUNC_RESPONSES_SETTINGS > apps/backend-responses/local.settings.json
+          echo $FUNC_RESPONSE_PROCESSOR_SETTINGS > apps/backend-response-processor/local.settings.json
 
       - name: Apply migrations and seed the database
         run: |
@@ -262,8 +262,6 @@ jobs:
           COOKIE_DOMAIN: ${{ secrets.COOKIE_DOMAIN }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SERVICE_BUS_CONNECTION_STRING: ${{ secrets.SERVICE_BUS_CONNECTION_STRING }}
-          SERVICE_BUS_QUEUE_NAME: ${{ secrets.SERVICE_BUS_QUEUE_NAME }}
           S3_PATHNAME: "/klicker-prod/**"
           S3_HOSTNAME: "sos-ch-dk-2.exo.io"
           NEXT_PUBLIC_AVATAR_BASE_PATH: "https://$S3_HOSTNAME/klicker-prod/avatars"
