--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -231,8 +231,8 @@ jobs:
         run: |
           mv packages/prisma/.env.template packages/prisma/.env
           mv apps/backend-docker/.env.template apps/backend-docker/.env
-          echo $FUNC_RESPONSES_SETTINGS > apps/backend-responses/local.settings.json
-          echo $FUNC_RESPONSE_PROCESSOR_SETTINGS > apps/backend-response-processor/local.settings.json
+          echo "$FUNC_RESPONSES_SETTINGS" > apps/backend-responses/local.settings.json
+          echo "$FUNC_RESPONSE_PROCESSOR_SETTINGS" > apps/backend-response-processor/local.settings.json
 
       - name: Apply migrations and seed the database
         run: |
