--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -231,6 +231,8 @@ jobs:
           mv apps/backend-docker/.env.template apps/backend-docker/.env
           echo "$FUNC_RESPONSES_SETTINGS" > apps/backend-responses/local.settings.json
           echo "$FUNC_RESPONSE_PROCESSOR_SETTINGS" > apps/backend-response-processor/local.settings.json
+          cat apps/backend-responses/local.settings.json
+          ls -la apps/backend-responses
 
       - name: Apply migrations and seed the database
         run: |
