--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -248,7 +248,7 @@ jobs:
         with:
           install: false
           start: npm run start:test
-          wait-on: 'http://localhost:3001'
+          wait-on: 'http://127.0.0.1:3000'
           record: true
           browser: electron
         env:
